--- a/index.toml
+++ b/index.toml
@@ -1,5 +1,9 @@
 hash-format = "sha256"
 
 [[files]]
+file = "mods/neruina.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/stackdeobf.pw.toml"
 metafile = true
