--- a/config/fabrication/features.ini
+++ b/config/fabrication/features.ini
@@ -1330,7 +1330,7 @@
 	; Experimental. Once sufficiently tested, will 
 	; be moved out of Extra. 
 	; 
-	extra.colorful_redstone=unset
+	extra.colorful_redstone=true
 
 	; Server Only
 	; 
