--- a/index.toml
+++ b/index.toml
@@ -1,5 +1,13 @@
 hash-format = "sha256"
 
 [[files]]
+file = "mods/chunky.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/chunkyborder.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/offlinecommands.pw.toml"
 metafile = true
