--- a/config/oneironaut/server.json5
+++ b/config/oneironaut/server.json5
@@ -2,7 +2,7 @@
 	"miscConfig": {
 		"ideaLifetime": 72000,
 		"planeShiftOtherPlayers": false,
-		"swapRequiresNoosphere": true,
+		"swapRequiresNoosphere": false,
 		"swapSwapsBEs": true,
 		"impulseRedirectsFireball": true,
 		"infusionEternalChorus": true,
