--- a/mods/bobby.pw.toml
+++ b/mods/bobby.pw.toml
@@ -11,3 +11,8 @@ hash = "bdc0285d4209c529019ae1c5f1f0af0e3a3cffa6"
 [update.modrinth]
 mod-id = "M08ruV16"
 version = "2cuVyTav"
+
+[option]
+optional = true
+default = true
+description = "allows you to have a reasonable view dist, not reccomended to disable"
