--- a/mods/extreme_sound_muffler.pw.toml
+++ b/mods/extreme_sound_muffler.pw.toml
@@ -11,3 +11,8 @@ hash = "099d2a64f019a73f2c03f4cd2d9c9e8cc42976d1"
 [update.modrinth]
 mod-id = "5IIKsxiL"
 version = "6lDRgX2g"
+
+[option]
+optional = true
+default = true
+description = "lets you mute/change the volume of individual sounds in the game, you can even have it do things in specific areas, so you could mute a specific spell circle for example"
