--- a/mods/iris.pw.toml
+++ b/mods/iris.pw.toml
@@ -11,3 +11,8 @@ hash = "880c0b9ce38bb4997645793407c1801df83f4233"
 [update.modrinth]
 mod-id = "YL57xq9U"
 version = "s5eFLITc"
+
+[option]
+optional = true
+default = false
+description = "lets you use shaders"
