--- a/mods/mouse-tweaks.pw.toml
+++ b/mods/mouse-tweaks.pw.toml
@@ -11,3 +11,8 @@ hash = "6a6b977e671b1ab625e740fc70fb5300c21bb841"
 [update.modrinth]
 mod-id = "aC3cM3Vq"
 version = "mjuG4AYd"
+
+[option]
+optional = true
+default = true
+description = "improves minecraft guis, letting you do things like shift-click dragging items between containers"
