--- a/mods/better-advancements.pw.toml
+++ b/mods/better-advancements.pw.toml
@@ -11,3 +11,8 @@ hash = "22964ac6041bd356e40658eb50425ae730f1b071"
 [update.modrinth]
 mod-id = "Q2OqKxDG"
 version = "g2QPj5Kb"
+
+[option]
+optional = true
+default = true
+description = "improves the advancements screen"
