--- a/mods/notes.pw.toml
+++ b/mods/notes.pw.toml
@@ -11,3 +11,8 @@ hash = "fedf123fa56ddbfeed49a19a49f0fc164d5fef7e"
 [update.modrinth]
 mod-id = "ko8Qabo1"
 version = "W9lwYk5g"
+
+[option]
+optional = true
+default = true
+description = "lets you take notes in game"
