add dummy, paintings, and chunky configs, and enable player tps on oneironaut config

--- a/config/oneironaut/server.json5
+++ b/config/oneironaut/server.json5
@@ -1,7 +1,7 @@
 {
 	"miscConfig": {
 		"ideaLifetime": 72000,
-		"planeShiftOtherPlayers": false,
+		"planeShiftOtherPlayers": true,
 		"swapRequiresNoosphere": false,
 		"swapSwapsBEs": true,
 		"impulseRedirectsFireball": true,
