--- a/config/servercore/config.yml
+++ b/config/servercore/config.yml
@@ -11,14 +11,14 @@ features:
   autosave-interval: 6000
   # The fraction that decides the chance of experience orbs being able to merge with each other. (1 = 100%, 40 = 2.5%)
   # Note that just like in vanilla, experience orbs will still need to be of the same size to actually merge.
-  xp-merge-fraction: 40
+  xp-merge-fraction: 1
   # The radius in blocks that experience orbs will merge at.
   xp-merge-radius: 0.5
   # The radius in blocks that items will merge at.
   item-merge-radius: 0.5
   lobotomize-villagers:
     # Makes villagers tick less often if they are stuck in a 1x1 space.
-    enabled: false
+    enabled: true
     # Decides the interval in between villager ticks when lobotomized.
     tick-interval: 20
 
@@ -26,9 +26,9 @@ features:
 # Automatically modifies dynamic settings based on the server performance.
 dynamic:
   # Enables dynamic performance checks.
-  enabled: false
+  enabled: true
   # The average MSPT to target.
-  target-mspt: 35
+  target-mspt: 50
   # The settings that will be decreased when the server is overloaded, in the specified order.
   # Removing a setting from the list will disable it.
   # ► max = The maximum value the server will increase the setting to.
@@ -55,7 +55,7 @@ dynamic:
       interval: 15
 
     - setting: 'VIEW_DISTANCE'
-      max: 10
+      max: 2
       min: 2
       increment: 1
       interval: 150
@@ -64,7 +64,7 @@ dynamic:
 # A special mobcap that only affects the breeding of animals and villagers.
 breeding-cap:
   # Enables breeding caps.
-  enabled: false
+  enabled: true
   # The breeding cap for villagers.
   # ► limit = The limit of mobs of the same type within range. Setting this to negative will disable the breeding cap.
   # ► range = The range it will check for entities of the same type.
@@ -87,17 +87,17 @@ mob-spawning:
   # ► additional-capacity = Additional capacity for this specific mobcap. Decides how much it can spawn over the regular mobcap.
   # It is recommended to allow them to spawn a bit over the regular mobcap as they would otherwise never get a chance to spawn.
   zombie-reinforcements:
-    enforce-mobcap: false
+    enforce-mobcap: true
     additional-capacity: 32
 
   # Mobcap settings for zombified piglin spawning from nether portal random ticks.
   nether-portal-randomticks:
-    enforce-mobcap: false
+    enforce-mobcap: true
     additional-capacity: 32
 
   # Mobcap settings for mobs spawned from monster spawners.
   monster-spawners:
-    enforce-mobcap: false
+    enforce-mobcap: true
     additional-capacity: 32
 
   # A list of mob categories with their respective mobcap and spawn interval.
@@ -156,18 +156,18 @@ commands:
 # Note: while this is a very powerful feature, it can still slow down mobfarms and break very specific technical contraptions.
 activation-range:
   # Enables activation range.
-  enabled: false
+  enabled: true
   # Briefly ticks entities newly added to the world for 10 seconds (includes both spawning and loading).
   # This gives them a chance to properly immunize when they are spawned if they should be. Can be helpful for mobfarms.
   tick-new-entities: true
   # Enables vertical range checks. By default, activation ranges only work horizontally.
   # This can greatly improve performance on taller worlds, but might break a few very specific ai-based mobfarms.
-  use-vertical-range: false
+  use-vertical-range: true
   # Skips 1/4th of entity ticks whilst not immune.
   # This affects entities that are within the activation range, but not immune (for example by falling or being in water).
   skip-non-immune: false
   # Allows villagers to tick regardless of the activation range when panicking.
-  villager-tick-panic: true
+  villager-tick-panic: false
   # The time in seconds that a villager needs to be inactive for before obtaining work immunity (if it has work tasks).
   villager-work-immunity-after: 20
   # The amount of ticks an inactive villager will wake up for when it has work immunity.
