--- a/mods/cristel-lib.pw.toml
+++ b/mods/cristel-lib.pw.toml
@@ -1,6 +1,6 @@
 name = "Cristel Lib"
 filename = "cristellib-1.1.5-fabric.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/cl223EMc/versions/tBnivdbu/cristellib-1.1.5-fabric.jar"
@@ -11,3 +11,8 @@ hash = "fbf3e76abc2da1a31db0f998c39e64b69300e9bc"
 [update.modrinth]
 mod-id = "cl223EMc"
 version = "tBnivdbu"
+
+[option]
+optional = true
+default = false
+description = "library for expanded ecosphere"
