--- a/mods/sodium.pw.toml
+++ b/mods/sodium.pw.toml
@@ -11,3 +11,8 @@ hash = "bcdbf37d9494e405cba210d7a80ed58e756297b5"
 [update.modrinth]
 mod-id = "AANobbMI"
 version = "OihdIimA"
+
+[option]
+optional = true
+default = true
+description = "greatly improves fps"
