--- a/mods/indium.pw.toml
+++ b/mods/indium.pw.toml
@@ -11,3 +11,8 @@ hash = "d824614e7a173d273167969f427702f51846aca7"
 [update.modrinth]
 mod-id = "Orvt0mRa"
 version = "nQHYSjxO"
+
+[option]
+optional = true
+default = true
+description = "greatly improves fps"
