--- a/mods/neruina.pw.toml
+++ b/mods/neruina.pw.toml
@@ -1,6 +1,6 @@
 name = "Neruina - Ticking Entity Fixer"
 filename = "Neruina-2.3.1-beta.1-fabric+1.20.1.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/1s5x833P/versions/NuXh08QB/Neruina-2.3.1-beta.1-fabric%2B1.20.1.jar"
@@ -11,3 +11,8 @@ hash = "4cf4580d4cc63ba7ad114815b4ef403c8eface88"
 [update.modrinth]
 mod-id = "1s5x833P"
 version = "NuXh08QB"
+
+[option]
+optional = true
+default = true
+description = "makes your name not always crash when something goes wrong"
