--- a/mods/kubejs.pw.toml
+++ b/mods/kubejs.pw.toml
@@ -1,6 +1,6 @@
 name = "KubeJS"
 filename = "kubejs-fabric-2001.6.5-build.16.jar"
-side = "both"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/umyGl7zF/versions/kPLHkyoJ/kubejs-fabric-2001.6.5-build.16.jar"
