--- a/mods/yacl.pw.toml
+++ b/mods/yacl.pw.toml
@@ -15,4 +15,4 @@ version = "dvS5DjUA"
 [option]
 optional = true
 default = true
-description = "needed for particle rain"
+description = "needed for particle rain and zoomify"
