--- a/mods/zoomify.pw.toml
+++ b/mods/zoomify.pw.toml
@@ -11,3 +11,8 @@ hash = "16dfed03d222c39790fd93cc84203bcd8da1bcba"
 [update.modrinth]
 mod-id = "w7ThoJFB"
 version = "BJgR1rfP"
+
+[option]
+optional = true
+default = true
+description = "Lets you zoom in"
