--- a/mods/zoomify.pw.toml
+++ b/mods/zoomify.pw.toml
@@ -1,18 +1,13 @@
 name = "Zoomify"
-filename = "Zoomify-2.14.5+1.20.1.jar"
+filename = "Zoomify-2.14.4+1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/w7ThoJFB/versions/BJgR1rfP/Zoomify-2.14.5%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/w7ThoJFB/versions/VsZyF8DS/Zoomify-2.14.4%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "16dfed03d222c39790fd93cc84203bcd8da1bcba"
+hash = "6a1858e728e774d941d8f000f789e5fa4870edca"
 
 [update]
 [update.modrinth]
 mod-id = "w7ThoJFB"
-version = "BJgR1rfP"
-
-[option]
-optional = true
-default = true
-description = "Lets you zoom in"
+version = "VsZyF8DS"
