--- a/mods/slate-works.pw.toml
+++ b/mods/slate-works.pw.toml
@@ -1,13 +1,13 @@
 name = "Slate Works"
-filename = "Slate_Work-1.0.jar"
+filename = "Slate_Work-0.3.5.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/3DnSSjl3/versions/qWMcAIrZ/Slate_Work-1.0.jar"
+url = "https://cdn.modrinth.com/data/3DnSSjl3/versions/MWwrmP3s/Slate_Work-0.3.5.jar"
 hash-format = "sha1"
-hash = "67450d38c8c258c7d2531eda098c29ff13e0aef4"
+hash = "bf91f5f3802290daf16f2d76cf9cbe1b8148308b"
 
 [update]
 [update.modrinth]
 mod-id = "3DnSSjl3"
-version = "qWMcAIrZ"
+version = "MWwrmP3s"
