--- a/mods/slate-works.pw.toml
+++ b/mods/slate-works.pw.toml
@@ -1,13 +1,13 @@
 name = "Slate Works"
-filename = "Slate_Work-0.3.5.jar"
+filename = "Slate_Work-1.0.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/3DnSSjl3/versions/MWwrmP3s/Slate_Work-0.3.5.jar"
+url = "https://cdn.modrinth.com/data/3DnSSjl3/versions/jAIJeDdW/Slate_Work-1.0.2.jar"
 hash-format = "sha1"
-hash = "bf91f5f3802290daf16f2d76cf9cbe1b8148308b"
+hash = "1892b51bdbdaa843f153d2b3621a3cb2a03beb09"
 
 [update]
 [update.modrinth]
 mod-id = "3DnSSjl3"
-version = "MWwrmP3s"
+version = "jAIJeDdW"
