--- a/mods/hierophantics.pw.toml
+++ b/mods/hierophantics.pw.toml
@@ -1,13 +1,13 @@
 name = "Hierophantics"
-filename = "hierophantics-fabric-1.2.3.jar"
+filename = "hierophantics-fabric-1.3.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/ybwf7iLN/versions/JiebIEHa/hierophantics-fabric-1.2.3.jar"
+url = "https://cdn.modrinth.com/data/ybwf7iLN/versions/GKy3lrqA/hierophantics-fabric-1.3.1.jar"
 hash-format = "sha1"
-hash = "18485888b9f9e986f6679cabbee996e6868e9151"
+hash = "97004ee555b83af857876a26f834a913e16af577"
 
 [update]
 [update.modrinth]
 mod-id = "ybwf7iLN"
-version = "JiebIEHa"
+version = "GKy3lrqA"
