--- a/mods/deathlog.pw.toml
+++ b/mods/deathlog.pw.toml
@@ -11,3 +11,8 @@ hash = "a637205931bac5fd455341d82cc32bb181d617f7"
 [update.modrinth]
 mod-id = "TPAYeAOc"
 version = "V0Hz3q2W"
+
+[option]
+optional = true
+default = true
+description = "Lets you log your deaths clientside, optionally taking screenshots of deaths, and letting you restore old deaths from the server in singleplayer"
