--- a/mods/owo-lib.pw.toml
+++ b/mods/owo-lib.pw.toml
@@ -1,6 +1,6 @@
 name = "oωo (owo-lib)"
 filename = "owo-lib-0.11.2+1.20.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/ccKDOlHs/versions/zyOBB7J4/owo-lib-0.11.2%2B1.20.jar"
