--- a/mods/slate-works.pw.toml
+++ b/mods/slate-works.pw.toml
@@ -1,13 +1,13 @@
 name = "Slate Works"
-filename = "Slate_Work-1.0.2.jar"
+filename = "Slate_Work-1.0.3.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/3DnSSjl3/versions/jAIJeDdW/Slate_Work-1.0.2.jar"
+url = "https://cdn.modrinth.com/data/3DnSSjl3/versions/RPwr7eUO/Slate_Work-1.0.3.jar"
 hash-format = "sha1"
-hash = "1892b51bdbdaa843f153d2b3621a3cb2a03beb09"
+hash = "5265167cc71b005fe714dcc5b41f726b637b8bb7"
 
 [update]
 [update.modrinth]
 mod-id = "3DnSSjl3"
-version = "jAIJeDdW"
+version = "RPwr7eUO"
