--- a/mods/packages.pw.toml
+++ b/mods/packages.pw.toml
@@ -1,13 +1,13 @@
 name = "Packages"
-filename = "packages-1.20.1-fabric-2025.8.21.jar"
+filename = "packages-fabric-1.20.1-3.4.6.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/10DZYVis/versions/IHVzcOfW/packages-1.20.1-fabric-2025.8.21.jar"
+url = "https://cdn.modrinth.com/data/10DZYVis/versions/tHF1uI8T/packages-fabric-1.20.1-3.4.6.jar"
 hash-format = "sha1"
-hash = "58e208b86b2484c1a44b16b2dbfe6c14e42fc691"
+hash = "6408490389658609071614dc1be8907f751e776e"
 
 [update]
 [update.modrinth]
 mod-id = "10DZYVis"
-version = "IHVzcOfW"
+version = "tHF1uI8T"
