--- a/mods/chunky.pw.toml
+++ b/mods/chunky.pw.toml
@@ -14,5 +14,5 @@ version = "NHWYq9at"
 
 [option]
 optional = true
-default = false
+default = true
 description = "lets your client translate strings from chunky and see the worldborder (with chunkyborder)"
