Swap create dough with farmers dough

--- a/config/item_obliterator.json5
+++ b/config/item_obliterator.json5
@@ -26,6 +26,7 @@
     "create:mechanical_crafter",
     "create:mechanical_drill",
     "create:millstone",
+    "create:dough",
     "supplementaries:doormat",
     "phlexiful:battery_pants",
     "gravity_changer:plating"
