change many fabrication settings

--- a/config/fabrication/features.ini
+++ b/config/fabrication/features.ini
@@ -990,7 +990,7 @@
 	; Stance. 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/crawling.mp4
-	crawling=unset
+	crawling=true
 
 	; Server Only
 	; 
@@ -1009,7 +1009,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/collision_based_landing_pos.mp4
-	extra.collision_based_landing_pos=unset
+	extra.collision_based_landing_pos=true
 
 	; Server Only
 	; 
@@ -1017,7 +1017,7 @@
 	; on. It's the same as collision_based_landing_pos, but for block 
 	; properties like velocity and sliding. 
 	; 
-	extra.collision_based_velocity_pos=unset
+	extra.collision_based_velocity_pos=true
 
 	; Server Only
 	; 
@@ -1068,7 +1068,7 @@
 	; 
 	; Requires water_fills_on_break to have at least 2 water 
 	; sources. 
-	extra.water_fills_on_break_strict=unset
+	extra.water_fills_on_break_strict=true
 
 	; Server & Client (Client Optional)
 	; 
@@ -1224,7 +1224,7 @@
 	; nearby grows moss to that block, to make it a bit easier to work with 
 	; for building. 
 	; 
-	spreadable_moss=unset
+	spreadable_moss=true
 
 	; Server Only
 	; 
@@ -1239,7 +1239,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/unsaddle_creatures.mp4
-	unsaddle_creatures=unset
+	unsaddle_creatures=true
 
 	; Server Only
 	; 
@@ -1251,7 +1251,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/water_fills_on_break.mp4
-	water_fills_on_break=true
+	water_fills_on_break=unset
 
 ; New mechanics and powerful additions.
 ; 
@@ -1271,7 +1271,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/bottled_air.mp4
-	bottled_air=unset
+	bottled_air=true
 
 	; Server Only
 	; 
@@ -1299,7 +1299,7 @@
 	; Placing magenta glazed terracotta under a detector rail 
 	; makes it only detect minecarts moving in the direction of the arrow. 
 	; 
-	directional_detector_rails=unset
+	directional_detector_rails=true
 
 	; Server Only
 	; 
@@ -1309,7 +1309,7 @@
 	; direction.
 	; Works similar to a Railcraft Boarding Track. 
 	; 
-	directional_powered_rails=unset
+	directional_powered_rails=true
 
 	; Server Only
 	; 
@@ -1323,7 +1323,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/enhanced_moistness.mp4
-	enhanced_moistness=unset
+	enhanced_moistness=true
 
 	; Redstone on top of wool will not connect to redstone on top of a 
 	; different color of wool.
@@ -1341,7 +1341,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/swap_conflicting_enchants.mp4
-	extra.swap_conflicting_enchants=unset
+	extra.swap_conflicting_enchants=true
 
 	; Server Only
 	; 
@@ -1359,7 +1359,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/grindstone_disenchanting.mp4
-	grindstone_disenchanting=unset
+	grindstone_disenchanting=true
 
 	; Server & Client (Client Optional)
 	; 
@@ -1385,7 +1385,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/pursurvers.mp4
-	pursurvers=unset
+	pursurvers=true
 
 	; Server Only
 	; 
@@ -1409,7 +1409,7 @@
 	; 
 	; Sheep wool slightly reduces some types of damage.
 	; 
-	wool_protected_sheep=true
+	wool_protected_sheep=unset
 
 ; Changes to vanilla balance.
 ; 
@@ -1418,7 +1418,7 @@
 	; 
 	; Anvils don't become "Too Expensive".
 	; 
-	anvil_no_level_limit=unset
+	anvil_no_level_limit=true
 
 	; Server Only
 	; 
@@ -1452,7 +1452,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/disable_prior_work_penalty.mp4
-	disable_prior_work_penalty=unset
+	disable_prior_work_penalty=true
 
 	; Server Only
 	; 
@@ -1461,7 +1461,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/drop_more_exp_on_death.mp4
-	drop_more_exp_on_death=unset
+	drop_more_exp_on_death=true
 
 	; Server Only
 	; 
@@ -1470,7 +1470,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/environmentally_friendly_creepers.mp4
-	environmentally_friendly_creepers=unset
+	environmentally_friendly_creepers=true
 
 	; Server Only
 	; 
@@ -1487,7 +1487,7 @@
 	; durability. 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/anvil_full_repair.mp4
-	extra.anvil_full_repair=unset
+	extra.anvil_full_repair=true
 
 	; Server Only
 	; 
@@ -1555,14 +1555,14 @@
 	; 
 	; Ender dragon always spawn a dragon egg when killed.
 	; 
-	extra.ender_dragon_always_spawn_egg=unset
+	extra.ender_dragon_always_spawn_egg=true
 
 	; Server Only
 	; 
 	; Ender dragon always gives the same xp amount as it would 
 	; the first time. 
 	; 
-	extra.ender_dragon_full_xp=unset
+	extra.ender_dragon_full_xp=true
 
 	; Server Only
 	; 
@@ -1574,7 +1574,7 @@
 	; 
 	; Allows players to eat unconditionally.
 	; 
-	extra.food_always_edible=unset
+	extra.food_always_edible=true
 
 	; Server Only
 	; 
@@ -1606,7 +1606,7 @@
 	; and modded crossbows. Only works for plain arrows.
 	; Honors InfiBows. 
 	; 
-	extra.infinity_crossbows_modded=unset
+	extra.infinity_crossbows_modded=true
 
 	; Server Only
 	; 
@@ -1614,7 +1614,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/infinity_mending.mp4
-	extra.infinity_mending=unset
+	extra.infinity_mending=true
 
 	; Server Only
 	; 
@@ -1689,7 +1689,7 @@
 	; via fabrication:exclude_from_item_inventory_check item tag. item can 
 	; be included via fabrication:include_in_item_inventory_check item tag. 
 	; 
-	extra.tools_in_bundles=unset
+	extra.tools_in_bundles=true
 
 	; Server Only
 	; 
@@ -1790,7 +1790,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/blaze_fertilizer.mp4
-	blaze_fertilizer=unset
+	blaze_fertilizer=true
 
 	; Server Only
 	; 
@@ -1937,7 +1937,7 @@
 	; 
 	; Prevents dolphins from picking up items.
 	; 
-	extra.no_dolphin_theft=unset
+	extra.no_dolphin_theft=true
 
 	; Server Only
 	; 
@@ -1995,7 +1995,7 @@
 	; 
 	; Villagers will follow players holding emerald blocks.
 	; 
-	extra.villagers_follow_emerald_blocks=unset
+	extra.villagers_follow_emerald_blocks=true
 
 	; Server Only
 	; 
@@ -2356,4 +2356,5 @@
 
 
 ; Notices: (Do not edit anything past this line; it will be overwritten)
-; - No notices. You're in the clear!
+; - balance.extra.shield_stagger was not found
+; Consider updating this config file by renaming it to fabrication.ini.old
