--- a/mods/antique-atlas-4.pw.toml
+++ b/mods/antique-atlas-4.pw.toml
@@ -14,4 +14,5 @@ version = "r8e868KR"
 
 [option]
 optional = true
+default = false
 description = "a more minimal, less powerful mapping option. requires Surveyor."
