--- a/mods/slate-works.pw.toml
+++ b/mods/slate-works.pw.toml
@@ -1,13 +1,13 @@
 name = "Slate Works"
-filename = "Slate_Work-1.0.4.jar"
+filename = "Slate_Work-1.0.5.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/3DnSSjl3/versions/S39dXhMt/Slate_Work-1.0.4.jar"
+url = "https://cdn.modrinth.com/data/3DnSSjl3/versions/AvOzmSVx/Slate_Work-1.0.5.jar"
 hash-format = "sha1"
-hash = "617109bb9f1cb930299b2f52a79950dcd074de6f"
+hash = "9db8fd46d119ed891deab2e4e697bb99c5102699"
 
 [update]
 [update.modrinth]
 mod-id = "3DnSSjl3"
-version = "S39dXhMt"
+version = "AvOzmSVx"
