--- a/mods/crafttweaker.pw.toml
+++ b/mods/crafttweaker.pw.toml
@@ -1,13 +1,13 @@
 name = "CraftTweaker"
-filename = "CraftTweaker-fabric-1.20.1-14.0.57.jar"
+filename = "CraftTweaker-fabric-1.20.1-14.0.59.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Xg35A4rS/versions/mdTQhYGk/CraftTweaker-fabric-1.20.1-14.0.57.jar"
+url = "https://cdn.modrinth.com/data/Xg35A4rS/versions/eMDmObNh/CraftTweaker-fabric-1.20.1-14.0.59.jar"
 hash-format = "sha1"
-hash = "7b5ecebda5f5f11929c7da88efe4ffd383dc56b9"
+hash = "073b992b7fb4d60acb76cce16977a4b9360e0c62"
 
 [update]
 [update.modrinth]
 mod-id = "Xg35A4rS"
-version = "mdTQhYGk"
+version = "eMDmObNh"
