--- a/mods/armourers-workshop.pw.toml
+++ b/mods/armourers-workshop.pw.toml
@@ -1,13 +1,13 @@
 name = "Armourer's Workshop"
-filename = "armourersworkshop-fabric-1.20.1-3.2.3-beta.jar"
+filename = "armourersworkshop-fabric-1.20.1-3.2.4-beta.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/y4JF3gXL/versions/AVZxSnTH/armourersworkshop-fabric-1.20.1-3.2.3-beta.jar"
+url = "https://cdn.modrinth.com/data/y4JF3gXL/versions/bwCcttpd/armourersworkshop-fabric-1.20.1-3.2.4-beta.jar"
 hash-format = "sha1"
-hash = "eff114c622ed3cbcaa7114629991db61c8a53458"
+hash = "0bff7d69e7a56b243bf455b654003dd4a9a8d686"
 
 [update]
 [update.modrinth]
 mod-id = "y4JF3gXL"
-version = "AVZxSnTH"
+version = "bwCcttpd"
