--- a/mods/fabric-language-kotlin.pw.toml
+++ b/mods/fabric-language-kotlin.pw.toml
@@ -1,13 +1,13 @@
 name = "Fabric Language Kotlin"
-filename = "fabric-language-kotlin-1.13.4+kotlin.2.2.0.jar"
+filename = "fabric-language-kotlin-1.13.6+kotlin.2.2.20.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Ha28R6CL/versions/mccDBWqV/fabric-language-kotlin-1.13.4%2Bkotlin.2.2.0.jar"
+url = "https://cdn.modrinth.com/data/Ha28R6CL/versions/i6MmXDwA/fabric-language-kotlin-1.13.6%2Bkotlin.2.2.20.jar"
 hash-format = "sha1"
-hash = "2120226cd81107dd52eaf5a9a4607035ff26100c"
+hash = "05e9cc4108da5b50735fa6d8a79a18fcd5310d82"
 
 [update]
 [update.modrinth]
 mod-id = "Ha28R6CL"
-version = "mccDBWqV"
+version = "i6MmXDwA"
