--- a/mods/hexdebug.pw.toml
+++ b/mods/hexdebug.pw.toml
@@ -1,13 +1,13 @@
 name = "HexDebug"
-filename = "hexdebug-fabric-0.3.0+1.20.1.jar"
+filename = "hexdebug-fabric-0.4.0+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/A2pscGC5/versions/gvNYxq9j/hexdebug-fabric-0.3.0%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/A2pscGC5/versions/hBUgjmfw/hexdebug-fabric-0.4.0%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "621a281a4a81e5cc427084b2ca2c8974d86a57e4"
+hash = "5708e643b0fbf5aa981c10cd8bc639c075140420"
 
 [update]
 [update.modrinth]
 mod-id = "A2pscGC5"
-version = "gvNYxq9j"
+version = "hBUgjmfw"
