--- a/mods/geckolib.pw.toml
+++ b/mods/geckolib.pw.toml
@@ -1,13 +1,13 @@
 name = "Geckolib"
-filename = "geckolib-fabric-1.20.1-4.7.4.jar"
+filename = "geckolib-fabric-1.20.1-4.8.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/8BmcQJ2H/versions/Lj5ypG1U/geckolib-fabric-1.20.1-4.7.4.jar"
+url = "https://cdn.modrinth.com/data/8BmcQJ2H/versions/uCuaXawt/geckolib-fabric-1.20.1-4.8.jar"
 hash-format = "sha1"
-hash = "4e8bbf2d225818ebade6435a99351c64f315b419"
+hash = "276f29714cf9ba774f3ee2a807f782535411238d"
 
 [update]
 [update.modrinth]
 mod-id = "8BmcQJ2H"
-version = "Lj5ypG1U"
+version = "uCuaXawt"
