--- a/mods/ioticblocks.pw.toml
+++ b/mods/ioticblocks.pw.toml
@@ -1,13 +1,13 @@
 name = "IoticBlocks"
-filename = "ioticblocks-fabric-1.0.1+1.20.1.jar"
+filename = "ioticblocks-fabric-1.0.2+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/u3PPsXzt/versions/Wl8zWGU0/ioticblocks-fabric-1.0.1%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/u3PPsXzt/versions/SJMDeeZs/ioticblocks-fabric-1.0.2%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "80cd23acb121ce870652da43eaaca9174a960330"
+hash = "fb6320daa2ebdb50fcd89db438f5dbd4a3486b29"
 
 [update]
 [update.modrinth]
 mod-id = "u3PPsXzt"
-version = "Wl8zWGU0"
+version = "SJMDeeZs"
