refresh configs from mod updates

--- a/config/hexdebug/client.toml
+++ b/config/hexdebug/client.toml
@@ -3,3 +3,4 @@ debugPort = 4444
 smartDebuggerSneakScroll = true
 debuggerDisplayMode = "ENABLED"
 showDebugClientLineNumber = false
+invertSplicingTableScrollDirection = false
