disable water filling on break, and enable obsidian tears

--- a/config/fabrication/features.ini
+++ b/config/fabrication/features.ini
@@ -1068,7 +1068,7 @@
 	; 
 	; Requires water_fills_on_break to have at least 2 water 
 	; sources. 
-	extra.water_fills_on_break_strict=true
+	extra.water_fills_on_break_strict=unset
 
 	; Server & Client (Client Optional)
 	; 
@@ -1376,7 +1376,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/obsidian_tears.mp4
-	obsidian_tears=unset
+	obsidian_tears=true
 
 	; Server Only
 	; 
