--- a/mods/geckolib.pw.toml
+++ b/mods/geckolib.pw.toml
@@ -1,13 +1,13 @@
 name = "Geckolib"
-filename = "geckolib-fabric-1.20.1-4.8.jar"
+filename = "geckolib-fabric-1.20.1-4.8.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/8BmcQJ2H/versions/uCuaXawt/geckolib-fabric-1.20.1-4.8.jar"
+url = "https://cdn.modrinth.com/data/8BmcQJ2H/versions/AXhbVyuq/geckolib-fabric-1.20.1-4.8.2.jar"
 hash-format = "sha1"
-hash = "276f29714cf9ba774f3ee2a807f782535411238d"
+hash = "5608d18e362a4c1263c2599735d1891d8be8cc26"
 
 [update]
 [update.modrinth]
 mod-id = "8BmcQJ2H"
-version = "uCuaXawt"
+version = "AXhbVyuq"
