Update particle rain - Features:     - added subtle block hit noises when blocks have rain falling on them     - added subtle random note sounds to note blocks when rain falls on them     - re-added streak particles     - re-added mist particles (formerly ground fog) - Config:     - added block spawn types to spawn particles from block faces     - added surface spawn type     - added volume sliders for individual weather sounds     - added dropdowns to list entries     - disabled some buttons conditionally to make it clearer when values aren't being used     - re-added ability to manually set spawn height limit instead of only using cloud height     - re-added missing particle options - Bugs fixed:     - fixed particles becoming invisible when resource packs use very translucent textures     - fixed vanilla water drip/splash particles not using the same tint as rain     - fixed wind blowing too strongly at high altitudes     - fixed maximum particle count breaking after closing config screen     - fixed particles spawning inside of and falling through ceilings made of non-full blocks     - fixed blended particles (mist) corrupting particle rendering     - fixed rain sounds appearing above weather height limit - Mod Compatibility:     - added workaround for a bug where RNG stops working near valkyrian skies ships with a eureka helm

--- a/mods/particle-rain.pw.toml
+++ b/mods/particle-rain.pw.toml
@@ -1,18 +1,18 @@
 name = "Particle Rain"
-filename = "particlerain-4.0.0-alpha.3+1.20.1-fabric.jar"
+filename = "particlerain-4.0.0-beta.1+1.20.1-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/nrikgvxm/versions/BOR3r76X/particlerain-4.0.0-alpha.3%2B1.20.1-fabric.jar"
+url = "https://cdn.modrinth.com/data/nrikgvxm/versions/ofJ6Mt4N/particlerain-4.0.0-beta.1%2B1.20.1-fabric.jar"
 hash-format = "sha1"
-hash = "849d43af28ca9589606cfd1248e75c1168696e8c"
+hash = "8e88f956c98b30cf0c3d2363084b0598562822e7"
 
 [update]
 [update.modrinth]
 mod-id = "nrikgvxm"
-version = "BOR3r76X"
+version = "ofJ6Mt4N"
 
 [option]
 optional = true
-default = true
 description = "makes rain look much nicer"
+default = true
