--- a/mods/hierophantics.pw.toml
+++ b/mods/hierophantics.pw.toml
@@ -1,13 +1,13 @@
 name = "Hierophantics"
-filename = "hierophantics-fabric-1.3.2.jar"
+filename = "hierophantics-fabric-1.3.3.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/ybwf7iLN/versions/iEY2L8in/hierophantics-fabric-1.3.2.jar"
+url = "https://cdn.modrinth.com/data/ybwf7iLN/versions/y21yUvjn/hierophantics-fabric-1.3.3.jar"
 hash-format = "sha1"
-hash = "6beb79a81f846c7bbbcce04dfe71d3d10e06d003"
+hash = "22ecd5369f2ca17f9df33c16637689d344c83930"
 
 [update]
 [update.modrinth]
 mod-id = "ybwf7iLN"
-version = "iEY2L8in"
+version = "y21yUvjn"
