Update particle rain
- fixed crash when loading resource packs with invisible weather textures
- fixed custom tints saving incorrectly and invalidating the config
- fixed resource pack animated splash particles not loading correctly
- fixed ripples not respecting config options
- removed spam log line

--- a/mods/particle-rain.pw.toml
+++ b/mods/particle-rain.pw.toml
@@ -1,16 +1,16 @@
 name = "Particle Rain"
-filename = "particlerain-4.0.0-beta.1+1.20.1-fabric.jar"
+filename = "particlerain-4.0.0-beta.2+1.20.1-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/nrikgvxm/versions/ofJ6Mt4N/particlerain-4.0.0-beta.1%2B1.20.1-fabric.jar"
+url = "https://cdn.modrinth.com/data/nrikgvxm/versions/pQkdl3xK/particlerain-4.0.0-beta.2%2B1.20.1-fabric.jar"
 hash-format = "sha1"
-hash = "8e88f956c98b30cf0c3d2363084b0598562822e7"
+hash = "4917039a5918eb55069ae9ebdc3b30b2f3aa47e9"
 
 [update]
 [update.modrinth]
 mod-id = "nrikgvxm"
-version = "ofJ6Mt4N"
+version = "pQkdl3xK"
 
 [option]
 optional = true
