Update lesser teleport
- Added zh_cn support

--- a/mods/lesser-teleport.pw.toml
+++ b/mods/lesser-teleport.pw.toml
@@ -1,13 +1,13 @@
 name = "Lesser Teleport"
-filename = "lessertp-1.2.1.jar"
+filename = "lessertp-1.2.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Ok7gSefA/versions/oFqMOS3Y/lessertp-1.2.1.jar"
+url = "https://cdn.modrinth.com/data/Ok7gSefA/versions/1dghakQD/lessertp-1.2.2.jar"
 hash-format = "sha1"
-hash = "741152fc3b4023901ebf8a842a4e36c45a6c6029"
+hash = "811ebca4e837ff1452c8cde2f767e2ab12d4b71b"
 
 [update]
 [update.modrinth]
 mod-id = "Ok7gSefA"
-version = "oFqMOS3Y"
+version = "1dghakQD"
