--- a/mods/cicada.pw.toml
+++ b/mods/cicada.pw.toml
@@ -3,11 +3,11 @@ filename = "cicada-lib-0.14.2+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/IwCkru1D/versions/KgsqJnsN/cicada-lib-0.14.2%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/IwCkru1D/versions/NnSiZSe6/cicada-lib-0.14.2%2B1.20.1.jar"
 hash-format = "sha1"
 hash = "71c8909eb3718cbdcc1b36bf77b37e2241c226d0"
 
 [update]
 [update.modrinth]
 mod-id = "IwCkru1D"
-version = "KgsqJnsN"
+version = "NnSiZSe6"
