--- a/mods/lmft.pw.toml
+++ b/mods/lmft.pw.toml
@@ -1,13 +1,13 @@
 name = "Load My F***ing Tags"
-filename = "lmft-1.0.2+1.20-fabric.jar"
+filename = "lmft-1.1.0+1.21.9-fabric.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/67kVxsaO/versions/IWpydKCV/lmft-1.0.2%2B1.20-fabric.jar"
+url = "https://cdn.modrinth.com/data/67kVxsaO/versions/uvoZP3eK/lmft-1.1.0%2B1.21.9-fabric.jar"
 hash-format = "sha1"
-hash = "2af70dc52be6a2fa7c0b8aca8621ac7ff1d476db"
+hash = "9b59c05e41ae71506a57319a18b06cd69ed0a12f"
 
 [update]
 [update.modrinth]
 mod-id = "67kVxsaO"
-version = "IWpydKCV"
+version = "uvoZP3eK"
